Fix up spacing in columns and align

--- a/hlx_statics/blocks/columns.css
+++ b/hlx_statics/blocks/columns.css
@@ -4,11 +4,16 @@ main div.columns {
     width: 100%;
 } 
 
-main div.columns > div{
+main div.columns > div {
     display: flex;
     flex-direction: row;
     padding-left: 60px;
     padding-right: 60px;
+    padding-bottom: 60px;
+} 
+
+main div.columns div:last-child {
+    padding-bottom: 0px;
 } 
 
 main div.columns > div > div{
@@ -19,12 +24,36 @@ main div.columns > div > div{
     padding-right: 32px;
 } 
 
+main div.columns > div h3 {
+    margin-top: 0;
+    text-align: left;
+} 
+
 main div.columns > div p {
+    margin-top: 0;
     font-size: 16px;
     font-weight: 400;
     color: rgb(75, 75, 75);
     line-height: 24px;
+    text-align: left;
+    padding-top: 0;
 } 
+
+main div.columns p.product-link {
+    margin-top: 0;
+    font-size: 16px;
+    font-weight: 400;
+    color: rgb(75, 75, 75);
+    line-height: 24px;
+    padding-top: 0;
+    padding-bottom: 0;
+    display: flex;
+    align-items: center;
+} 
+
+main div.columns p.product-link a {
+    padding-left: 16px;
+}
 
 main div.columns-dark {
     display: flex;
